--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'javax.websocket:javax.websocket-client-api:1.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
     implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.9'
+    implementation 'commons-lang:commons-lang:2.6'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
