--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,20 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation 'ch.qos.logback:logback-classic:1.2.11'
-    implementation 'commons-codec:commons-codec:1.15'
-    implementation 'javax.websocket:javax.websocket-client-api:1.1'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
-    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.9'
+    implementation 'org.slf4j:slf4j-api:2.0.12'
+    implementation 'ch.qos.logback:logback-classic:1.5.6'
+    implementation 'commons-codec:commons-codec:1.17.0'
+    implementation 'jakarta.websocket:jakarta.websocket-client-api:2.2.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+    implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:2.1.5'
     implementation 'commons-lang:commons-lang:2.6'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+compileJava {
+    options.release = 21
 }
 
 test {
